--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,9 @@
         <item name="android:colorForeground">@color/LightGrey</item>
     </style>
 
+    <style name="LinearProgress" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/LightSteelBlue</item>
+        <item name="android:progressBackgroundTint">@color/LightGrey</item>
+    </style>
+
 </resources>
